kubernetes/manifests/argocd-ingress/ingressroute.yaml
# kubernetes/manifests/argocd-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingressroute
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.core01.prod.gglohh.top`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
  tls:
    secretName: argocd-server-tls
